[workspace]
resolver = "2"
members = [
    "outcome_token",
    "market_factory",
    "lmsr_amm",
    "hyphe_vault",
    "oracle",
    "commit_reveal",
    "zk_verifier",
]

[workspace.dependencies]
soroban-sdk = "25.1.1"
soroban-token-sdk = "25.1.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
